css/default.css
/* ... */
.annotation .collapse.aux-links-container + .collapse.aux-links-container {
    margin-top: 0;
}
.annotation .TOC + .collapse.aux-links-container {
    margin-top: 0.75em;
}

/*************************/
/*  Per-section backlinks.
 */
.collapse.section-backlinks-container {
    --collapse-toggle-top-height: 2.75rem;

    margin-top: 1.25em;
    margin-bottom: 2em;
    margin-left: calc(-1 * var(--collapse-left-offset));
    padding-left: var(--collapse-left-offset);
}

.collapse.section-backlinks-container.expanded-not > .disclosure-button .part::before {
    opacity: 0.70;
}

.collapse.section-backlinks-container .section-backlinks {
    margin-top: 0.5em;
}

.collapse.section-backlinks-container .section-backlinks > .list-heading {
    margin-top: 0;
}
.collapse.section-backlinks-container .section-backlinks > ul {
    margin-top: 0.75em;
    margin-bottom: 0.5em;
}
.collapse.section-backlinks-container .section-backlinks > ul > li:last-child > blockquote {
    margin-bottom: 0.5em;
}

/**********************************************************************/
/*  “Bare content” collapses (not a section, not code, not table, etc.)
 */

.collapse.bare-content.expanded-not > .collapse-content-wrapper > p {
    margin-left: 0.375em;
    margin-right: 0.375em;
}
.collapse.bare-content.expanded-not > .collapse-content-wrapper > p:first-child {
    margin-top: 0.125em;
}

/****************************************************/
/*  Miscellaneous/general content in collapse blocks.
 */
.collapse.expanded > .collapse-content-wrapper > :last-child {
    margin-bottom: 0.5em;
}
.collapse.no-abstract.expanded > .collapse-content-wrapper > p:first-child {
    margin-top: 0.5em;
}

.collapse section > :first-child {
    margin-left: 0;
}

/***********************/
/*  Collapse edge cases.
 */

li > .collapse > .collapse-content-wrapper > ul {
    margin-top: 0.125em;
}
li > .collapse.expanded > .collapse-content-wrapper > ul {
    margin-top: 0.5em;
}

.collapse [class^='horizontal-rule'] {
    clear: none;
}

body.indented .abstract-collapse + .collapse-content-wrapper > p:not([class^='drop-cap']):first-child {
    text-indent: 2.5em;
}
body.indented-not .abstract-collapse + .collapse-content-wrapper > p:not([class^='drop-cap']):first-child {
    margin-top: 1em;
}
@media all and (max-width: 649px) {
    body.indented .abstract-collapse + .collapse-content-wrapper > p:not([class^='drop-cap']):first-child {
        text-indent: 1.75em;
    }
    body.indented-not .abstract-collapse + .collapse-content-wrapper > p:not([class^='drop-cap']):first-child {
        margin-top: 1em;
    }
}

.footnote .collapse {
    --collapse-left-offset: 0.75em;
}


/************/
/* HEADINGS */
/************/

/* HEADER H1-6 HIERARCHY */
h1, h2, h3, h4, h5, h6 {
    margin: 1.25em 0 0.5em -0.75rem;
    font-weight: bold;
    position: relative;
}
@media all and (max-width: 649px) {
    h1, h2, h3, h4, h5, h6 {
        margin: 1.25em 0 0.5em 0;
    }
}

/*=-------------------------=*/
/*= Inline code in headings =*/
/*=-------------------------=*/

h1 code,
h2 code,
h3 code,
h4 code,
h5 code,
h6 code {
    border: none;
    padding: 0;
    background-color: inherit;
    font-size: inherit;
    font-weight: normal;
}

/*=----------------=*/
/*= Heading levels =*/
/*=----------------=*/
/* h1 defined in initial.css */
section:not(.collapse) > h1:first-child {
    line-height: 1;
    margin: 1.75em 0.05em 0.375em 0;
    text-align: right;
    font-weight: 600;
    box-shadow:
        0 -2px 0 0 var(--GW-H1-box-shadow-background-color) inset,
        0 -3px 0 0 var(--GW-H1-box-shadow-line-color) inset;
}
.markdownBody section:not(.collapse) > h1:first-child a {
    position: relative;
}
.markdownBody section:not(.collapse) > h1:first-child a::after {
    position: absolute;
    top: 0.15em;
}
@media all and (min-width: 650px) {
    section:not(.collapse) > h1:first-child {
        margin: 1.75em 0 0.375em -0.75rem;
        font-size: 2em;
        overflow: hidden;
        padding: 0 0.05em 7px 1.25rem;
        box-shadow:
            0 -5px 0 0 var(--GW-H1-box-shadow-background-color) inset,
            0 -6px 0 0 var(--GW-H1-box-shadow-line-color) inset;
    }
    .markdownBody section:not(.collapse) > h1:first-child a::after {
        left: -0.75em;
    }
}

/*  Italics in h1 headings.
    */
h1 em:last-child {
    padding-right: 0.075em;
}

h2 {
    text-transform: uppercase;
    font-size: 1.25em;
    padding: 0 0.5em 2px 0;
    line-height: 1.25;
}
h2::after {
    content: "";
    display: block;
    position: absolute;
    width: 100%;
    border-bottom: 1px dotted var(--GW-H2-bottom-border-color);
    left: 0;
    bottom: 0.05em;
    pointer-events: none;
}
.markdownBody section:not(.collapse) > h2:first-child a {
    position: relative;
}
.markdownBody section:not(.collapse) > h2:first-child a::after {
    position: absolute;
    top: 0.1em;
    left: unset;
    right: -0.75em;
}
@media all and (min-width: 650px) {
    section:not(.collapse) > h2:first-child {
        overflow: hidden;
    }
}

h3 {
    text-transform: capitalize;
    font-size: 1.125em;
}
h4 {
    text-transform: capitalize;
}
h5 {
    font-size: 1em;
}
h6 {
    font-size: 1em;
    font-weight: normal;
    font-style: italic;
}

/*  Margins between adjacent headings should collapse.
    */
h1 + section > h2:first-child,
h2 + section > h3:first-child {
    margin-top: 0;
}

/*=----------------------------=*/
/*= Section heading self-links =*/
/*=----------------------------=*/

.markdownBody section > :first-child > a {
    background: none;
}
.markdownBody section:not(.collapse) > h1:first-child a,
.markdownBody section:not(.collapse) > h2:first-child a {
    display: block;
}
section > :first-child a::after {
    content: "\00B6"; /* Pilcrow sign: ¶ */
    font-size: 0.75em;
    position: relative;
    top: -0.2em;
    left: 0.35em;
    visibility: hidden;
    opacity: 0;
    transition: opacity 0s ease 0.1s;
}
/* ... */

